--- a/src/main/resources/templates/pages/name-and-surname.html
+++ b/src/main/resources/templates/pages/name-and-surname.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Name and surname</title>
 </head>
 <body>
+<p th:text="example">Text to replace by th:text attribute value</p>
 <h2>My name and surname</h2>
-<p>My name is: Lyanne</p>
-<p>My surname is: Raud</p>
+<p>My name is: <span th:text = "${myName}">Lyanne</span> Lyanne</p>
+<p>My surname is: <span th:text = "${mySurname}">Raud</span> </p>
 </body>
 </html>
