--- a/src/main/resources/templates/pages/name-and-surname.html
+++ b/src/main/resources/templates/pages/name-and-surname.html
@@ -9,7 +9,7 @@
 <body>
 <p th:text="example">Text to replace by th:text attribute value</p>
 <h2>My name and surname</h2>
-<p>My name is: <span th:text = "${myName}">Lyanne</span> Lyanne</p>
-<p>My surname is: <span th:text = "${mySurname}">Raud</span> </p>
+<p>My name is: <span th:text = "${myName}">Lyanne</span></p>
+<p>My surname is: <span th:text = "${mySurname}">Raud</span></p>
 </body>
 </html>
