--- a/src/main/resources/templates/persons/persons-names.html
+++ b/src/main/resources/templates/persons/persons-names.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Persons Names</title>
 </head>
 <body>
-
+<h2>Persons Names</h2>
+<ul th:each="person:${personsKey}">
+    <li th:text="${person.name()}">Mirjam</li>
+</ul>
 </body>
 </html>
