[change] - link from persons-names.html to details-table.html created

--- a/src/main/resources/templates/persons/persons-names.html
+++ b/src/main/resources/templates/persons/persons-names.html
@@ -10,5 +10,7 @@
 <ul th:each="person:${personsKey}">
     <li th:text="${person.name()}">Mirjam</li>
 </ul>
+<br>
+<a th:href="@{/persons/details}" href="#">Person details</a>
 </body>
 </html>
